[package]
name = "iced_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["highlighter", "tokio", "debug", "wgpu" ] }
iced_aw = { version = "0.8.0", default-features = false, features = [ "tab_bar" ] }
tokio = { version = "1.36.0", features = ["fs"] }
rfd = "0.14.0"